<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/defPadding"
            android:paddingBottom="30dp"
            android:orientation="vertical"
            tools:context="net.mk05.editacontactos.MainActivity">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/defPadding" >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cntNombre"
                    android:inputType="text"
                    android:hint="@string/hintNombre" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hintFechNac"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginBottom="@dimen/defPadding" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cntFechaNacimiento"
                android:datePickerMode="spinner"
                android:layout_marginBottom="@dimen/defPadding"></DatePicker>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/defPadding">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cntTelefono"
                    android:inputType="phone"
                    android:hint="@string/hintTelefono"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/defPadding">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintEmail"
                    android:id="@+id/cntEmail"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/defPadding">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cntDesc"
                    android:hint="@string/hintDescripcion" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSiguiente"
                android:id="@+id/btnSig" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>